--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,26 @@ FetchContent_Declare(SFML
     GIT_REPOSITORY https://github.com/SFML/SFML.git
     GIT_TAG 2.6.x)
 
-FetchContent_MakeAvailable(SFML)
+FetchContent_Declare(ferrugo-core
+    GIT_REPOSITORY https://github.com/volsungdenichor/ferrugo-core.git
+    GIT_TAG main)
+
+FetchContent_Declare(ferrugo-seq
+    GIT_REPOSITORY https://github.com/volsungdenichor/ferrugo-seq.git
+    GIT_TAG main)
+
+FetchContent_Declare(ferrugo-geo
+    GIT_REPOSITORY https://github.com/volsungdenichor/ferrugo-geo.git
+    GIT_TAG main)
+
+FetchContent_MakeAvailable(ferrugo-core ferrugo-seq ferrugo-geo SFML)
 
 add_executable(main src/main.cpp)
 target_link_libraries(main PRIVATE sfml-graphics)
 target_compile_features(main PRIVATE cxx_std_17)
 
-include_directories (/usr/include/freetype2)
+include_directories(/usr/include/freetype2)
+
+include_directories(${ferrugo-core_SOURCE_DIR}/include)
+include_directories(${ferrugo-seq_SOURCE_DIR}/include)
+include_directories(${ferrugo-geo_SOURCE_DIR}/include)
