using 'zx' as the dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,5 @@ option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
 include(dependencies.cmake)
 
 add_executable(main src/main.cpp)
-target_link_libraries(main PRIVATE sfml-graphics)
+target_link_libraries(main PRIVATE sfml-graphics zx::sequence zx::functional)
 target_compile_features(main PRIVATE cxx_std_17)
-
-# include_directories(/usr/include/freetype2)
-
-# include_directories(${ferrugo-core_SOURCE_DIR}/include)
-# include_directories(${ferrugo-alg_SOURCE_DIR}/include)
